--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+        </nav>
+    </header>
     <p>Testing</p>
 </body>
 </html>
